<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title_settings" >

    <PreferenceCategory android:title="@string/pref_twitter_category_title">
        <ListPreference
            android:key="@string/pref_twitter_get_tweet_count_key"
            android:title="@string/pref_twitter_get_tweet_count_title"
            android:summary="@string/pref_twitter_get_tweet_count_summary"
            android:entries="@array/pref_twitter_get_tweet_count_entries"
            android:entryValues="@array/pref_twitter_get_tweet_count_entries"
            android:defaultValue="@integer/pref_twitter_tweet_count_default"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_app_category_title">
        <Preference
            android:key="@string/pref_app_version_key"
            android:title="@string/pref_app_version_title"
            android:summary="@string/pref_app_version_summary" />
        <Preference
            android:key="@string/pref_app_oss_key"
            android:title="@string/pref_app_oss_title" />
    </PreferenceCategory>
</PreferenceScreen>